[workspace]
resolver = "2"
members = [
    "crates/snomed-types",
    "crates/snomed-loader",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
# Internal crates
snomed-types = { path = "crates/snomed-types" }
snomed-loader = { path = "crates/snomed-loader" }

# External dependencies
csv = "1.3"
thiserror = "2.0"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
