[workspace]
resolver = "2"
members = [
    "crates/snomed-types",
    "crates/snomed-loader",
    "crates/snomed-service",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
# Internal crates
snomed-types = { path = "crates/snomed-types" }
snomed-loader = { path = "crates/snomed-loader" }
snomed-service = { path = "crates/snomed-service" }

# ECL (Expression Constraint Language)
snomed-ecl = { git = "https://github.com/shehanm83/snomed-ecl-rust.git" }
snomed-ecl-executor = { git = "https://github.com/shehanm83/snomed-ecl-rust.git" }
snomed-ecl-optimizer = { git = "https://github.com/shehanm83/snomed-ecl-rust.git", features = ["full"] }

# Parsing & Data
csv = "1.3"
thiserror = "2.0"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# gRPC
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# Build dependencies
tonic-build = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
