[package]
name = "snomed-loader"
version = "0.1.0"
edition.workspace = true
description = "High-performance parser for SNOMED CT RF2 distribution files"
license.workspace = true

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
snomed-types.workspace = true
csv.workspace = true
thiserror.workspace = true
rayon = { workspace = true, optional = true }

# ECL (Expression Constraint Language) support
snomed-ecl.workspace = true
snomed-ecl-executor.workspace = true
snomed-ecl-optimizer.workspace = true

[dev-dependencies]
serde_json.workspace = true
