[package]
name = "snomed-service"
version = "0.1.0"
edition.workspace = true
description = "gRPC service for SNOMED CT terminology queries"
license.workspace = true

[[bin]]
name = "snomed-server"
path = "src/main.rs"

[dependencies]
snomed-types.workspace = true
snomed-loader.workspace = true
snomed-ecl-optimizer.workspace = true
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
tonic-build.workspace = true
